fix(fab): fix fab flicker on safari and general improvements (#293)
* fix(fab): fix fab flicker on ssafari and general improvements

* otimize fab calculations

--- a/src/assets/styles/includes/globals.css
+++ b/src/assets/styles/includes/globals.css
@@ -22,6 +22,7 @@
 
 :global .pageContent {
   background-color: var(--color-background-light-gray);
+  position: relative;
 }
 
 :global(._isCircle) img {
