--- a/src/components/structural/fab/fab.module.css
+++ b/src/components/structural/fab/fab.module.css
@@ -2,6 +2,13 @@
 @import '../../../assets/styles/includes/variables.css';
 @import '../../../assets/styles/includes/grid.css';
 
+.wrapperAbsolute {
+  bottom: 0;
+  left: -var(--component-wrapper-margin-lg);
+  position: absolute;
+  width: 100vw;
+}
+
 .wrapper {
   border-radius: 50%;
   bottom: 20px;
@@ -39,7 +46,8 @@
       calc(var(--container-margin-lg)
       + ((100vw - (2 * var(--container-margin-lg)))/var(--grid-columns-lg))
       + 2 * var(--grid-gutter-lg)
-      - ((var(--fab-size-lg) + var(--grid-gutter-lg)) / 2));
+      - ((var(--fab-size-lg) + var(--grid-gutter-lg)) / 2)
+      + (var(--component-wrapper-margin-lg) / 2));
     transform: translateY(390px);
     width: var(--fab-size-lg);
 
@@ -53,6 +61,10 @@
       }
     }
   }
+
+  &:global(.Plx--in-second) { /* stylelint-disable-line */
+    position: absolute;
+  }
 }
 
 @keyframes fabHover {
@@ -65,6 +77,7 @@
 
 .content {
   height: 100%;
+  transform: translate3d(0,0,0);
   width: 100%;
 }
 
